--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/lesson-info/lesson-info.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/lesson-info/lesson-info.component.html
@@ -22,7 +22,7 @@
         </mat-tab>
         <mat-tab label="Teachers">
             <div class="tab-container">
-                <app-lesson-teachers></app-lesson-teachers>
+                <app-lesson-teachers [lesson]="lesson"></app-lesson-teachers>
             </div>
         </mat-tab>
         <mat-tab label="Settings">
