--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/login/login.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/login/login.component.html
@@ -1,2 +1,2 @@
-<p>login works!</p>
-<a mat-stroked-button href="/register">Register</a>
+<h3>You must be logged in to access this page</h3>
+<button mat-stroked-button (click)="logIn()">Login</button>
