--- a/Student-Perfomance-Angular-Client/src/app/app.component.css
+++ b/Student-Perfomance-Angular-Client/src/app/app.component.css
@@ -35,3 +35,24 @@ mat-sidenav-content {
 .is-mobile .sidenav-container {
   flex: 1 0 auto;
 }
+footer {
+  min-height: 90px;
+  display: flex;
+  margin: auto -20px -20px -20px;
+  background-color: #1f1f1f;
+  padding: 20px 40px;
+}
+.general-container {
+  display: flex;
+  flex-direction: column;
+}
+.general-container > div {
+  margin-bottom: 30px;
+}
+footer > section {
+  width: 100%;
+}
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+}
