--- a/Student-Perfomance-Angular-Client/src/app/modules/admin/components/teachers-unconfirmed/teachers-unconfirmed.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/admin/components/teachers-unconfirmed/teachers-unconfirmed.component.html
@@ -6,7 +6,7 @@
             <mat-expansion-panel *ngFor="let teach of paginatedTeachers">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        {{teach.user.firstName + ' ' + teach.user.lastName + ' ' + teach.user.patronymic}}
+                        {{teach.user.firstName + ' ' + teach.user.lastName + (teach.user.patronymic ? ' ' + teach.user.patronymic : '')}}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
