--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/group-card/group-card.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/group-card/group-card.component.html
@@ -11,7 +11,7 @@
     <mat-card-content>
         <p *ngIf="group.specialization">Specialization: <em>{{group.specialization}}</em></p>
         <p>Year of study: <em>{{group.year}}</em></p>
-        <p>Headmen: <a *ngIf="group.headmen; else noHeadmen"
+        <!-- <p>Headmen: <a *ngIf="group.headmen; else noHeadmen"
                 routerLink="/students/{{group.headmen.id}}">{{group.headmen.user.lastName + ' ' + group.headmen.user.firstName}}</a>
         </p>
         <ng-template #noHeadmen>-</ng-template>
@@ -21,6 +21,6 @@
             </span></p>
         <ng-template #noCurator>-</ng-template>
         <p *ngIf="group.students">Number of students: <em>{{group.students.length}}</em></p>
-        <p>Average mark: <em>4.2</em>
+        <p>Average mark: <em>4.2</em> -->
     </mat-card-content>
 </mat-card>
