--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/login-header/login-header.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/login-header/login-header.component.html
@@ -1,1 +1,20 @@
-<a routerLink="/login"><i class="fas fa-sign-in-alt"></i> {{state ? 'Log Out' : 'Log In'}}</a>
+<button mat-stroked-button color="accent" (click)="logIn()" *ngIf="!(oidcSecurityService.isAuthenticated$ | async); else logIned">
+    <i class="fas fa-sign-in-alt"></i>Log In
+</button>
+<ng-template #logIned>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <i class="fas fa-home"></i>
+      </button>
+      <mat-menu #menu="matMenu">
+        <a class="profile-link" routerLink="/students/{{oidcSecurityService.getPayloadFromIdToken().sub}}" mat-menu-item>
+            <i class="fas fa-user-circle"></i>
+          <span> Profile</span>
+        </a>
+        <button mat-menu-item class="logout-button" (click)="logOut()">
+          <i class="fas fa-sign-in-alt"></i>
+          <span> Log Out</span>
+        </button>
+      </mat-menu>
+</ng-template>
+
+<!-- <button (click)="secret()">Secret</button> -->
