--- a/Student-Perfomance-Angular-Client/src/app/modules/common/components/teachers/teachers.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/common/components/teachers/teachers.component.html
@@ -6,8 +6,9 @@
     <mat-list>
         <div *ngFor="let teach of paginatedTeachers">
             <mat-list-item>
+                {{teach.position}}&nbsp;
                 <a
-                    routerLink="/teachers/{{teach.id}}">{{teach.position + ' ' + teach.user.firstName + ' ' + teach.user.lastName + (teach.user.patronymic ? ' ' + teach.user.patronymic : '')}}</a>
+                    routerLink="/teachers/{{teach.id}}">{{teach.user.firstName + ' ' + teach.user.lastName + (teach.user.patronymic ? ' ' + teach.user.patronymic : '')}}</a>
             </mat-list-item>
             <mat-divider></mat-divider>
         </div>
