--- a/Student-Perfomance-Angular-Client/src/app/modules/student/components/student-settings/student-settings.component.html
+++ b/Student-Perfomance-Angular-Client/src/app/modules/student/components/student-settings/student-settings.component.html
@@ -1,31 +1,93 @@
-<div *ngIf="student && groups">
+<div class="settings-container" *ngIf="student">
     <form [formGroup]="updateForm" novalidate (ngSubmit)="submit()">
-        <mat-form-field color="accent" hintLabel="Max 20 characters" appearance="outline">
-            <mat-label>First name</mat-label>
-            <input matInput placeholder="Ivan" #input maxlength="20" type="text" formControlName="firstName" required>
-            <mat-error *ngIf="updateForm.controls['firstName'].invalid && updateForm.controls['firstName'].dirty">
-                First name is required</mat-error>
-            <mat-hint align="end">{{updateForm.controls['firstName'].value?.length || 0}}/20</mat-hint>
-        </mat-form-field>
-        <mat-form-field color="accent" hintLabel="Max 20 characters" appearance="outline">
-            <mat-label>Last name</mat-label>
-            <input matInput placeholder="Khayovskiy" #input maxlength="20" type="text" formControlName="lastName"
-                required>
-            <mat-error *ngIf="updateForm.controls['lastName'].invalid && updateForm.controls['lastName'].dirty">
-                Last name is required</mat-error>
-            <mat-hint align="end">{{updateForm.controls['lastName'].value?.length || 0}}/20</mat-hint>
-        </mat-form-field>
-        <mat-form-field color="accent" hintLabel="Max 30 characters" appearance="outline">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="student@student.csn.khai.edu" #input maxlength="30" type="email"
-                formControlName="email" required>
-            <mat-error *ngIf="updateForm.controls['email'].invalid && updateForm.controls['email'].dirty">
-                Email is required</mat-error>
-            <mat-hint align="end">{{updateForm.controls['email'].value?.length || 0}}/30</mat-hint>
-        </mat-form-field>
+        <div class="fields-container">
+
+            <mat-form-field color="accent" hintLabel="Max 20 characters" appearance="outline">
+                <mat-label>First Name</mat-label>
+                <input matInput #input maxlength="20" type="text" formControlName="firstName" required>
+                <mat-error
+                    *ngIf="updateForm.controls['firstName'].touched && updateForm.controls['firstName'].dirty && updateForm.controls['firstName'].invalid">
+                    <div *ngIf="updateForm.controls['firstName'].errors.required">First Name is required</div>
+                    <div *ngIf="updateForm.controls['firstName'].errors.minlength">First Name must be at least 2
+                        characters long</div>
+                    <div *ngIf="updateForm.controls['firstName'].errors.maxlength">First Name must be less then 20
+                        characters long</div>
+                </mat-error>
+                <mat-hint align="end">{{input.value?.length || 0}}/20</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field color="accent" hintLabel="Max 20 characters" appearance="outline">
+                <mat-label>Last Name</mat-label>
+                <input matInput maxlength="20" type="text" formControlName="lastName" required>
+                <mat-error
+                    *ngIf="updateForm.controls['lastName'].touched && updateForm.controls['lastName'].dirty && updateForm.controls['lastName'].invalid">
+                    <div *ngIf="updateForm.controls['lastName'].errors.required">Last Name is required</div>
+                    <div *ngIf="updateForm.controls['lastName'].errors.minlength">Last Name must be at least 2
+                        characters
+                        long</div>
+                    <div *ngIf="updateForm.controls['lastName'].errors.maxlength">Last Name must be less then 20
+                        characters long</div>
+                </mat-error>
+                <mat-hint align="end">{{updateForm.controls['lastName'].value?.length || 0}}/20</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field color="accent" hintLabel="Max 30 characters" appearance="outline">
+                <mat-label>Patronymic</mat-label>
+                <input matInput maxlength="30" type="text" formControlName="patronymic">
+                <mat-error
+                    *ngIf="updateForm.controls['patronymic'].touched && updateForm.controls['patronymic'].dirty && updateForm.controls['patronymic'].invalid">
+                    <div *ngIf="updateForm.controls['patronymic'].errors.maxlength">Patronymic must be less then 20
+                        characters long</div>
+                </mat-error>
+                <mat-hint align="end">{{updateForm.controls['patronymic'].value?.length || 0}}/30</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field color="accent" hintLabel="Max 30 characters" appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput maxlength="30" type="email" formControlName="email" required>
+                <mat-error
+                    *ngIf="updateForm.controls['email'].touched && updateForm.controls['email'].dirty && updateForm.controls['email'].invalid">
+                    <div *ngIf="updateForm.controls['email'].errors.required">Email is required</div>
+                    <div *ngIf="updateForm.controls['email'].errors.email">Invalid email format</div>
+                    <div *ngIf="updateForm.controls['email'].errors.minlength">Email must be at least 5 characters
+                        long
+                    </div>
+                    <div *ngIf="updateForm.controls['email'].errors.maxlength">Email must be less then 30 characters
+                        long
+                    </div>
+                </mat-error>
+                <mat-hint align="end">{{updateForm.controls['email'].value?.length || 0}}/30</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field color="accent" appearance="outline">
+                <mat-label>Phone Number</mat-label>
+                <input matInput maxlength="15" type="tel" formControlName="phoneNumber" required>
+                <mat-error
+                    *ngIf="updateForm.controls['phoneNumber'].touched && updateForm.controls['phoneNumber'].dirty && updateForm.controls['phoneNumber'].invalid">
+                    <div *ngIf="updateForm.controls['phoneNumber'].errors.required">Phone number is required</div>
+                    <div *ngIf="updateForm.controls['phoneNumber'].errors.maxlength">Phone number must be less then 15
+                        characters long</div>
+                </mat-error>
+                <mat-hint align="end">{{updateForm.controls['phoneNumber'].value?.length || 0}}/15</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field color="accent" hintLabel="Max 20 characters" appearance="outline">
+                <mat-label>Department</mat-label>
+                <input matInput maxlength="20" type="text" formControlName="department" required>
+                <mat-error
+                    *ngIf="updateForm.controls['department'].touched && updateForm.controls['department'].dirty && updateForm.controls['department'].invalid">
+                    <div *ngIf="updateForm.controls['department'].errors.required">Phone number is required</div>
+                    <div *ngIf="updateForm.controls['department'].errors.maxlength">Phone number must be less then 20
+                        characters long</div>
+                </mat-error>
+                <mat-hint align="end">{{updateForm.controls['department'].value?.length || 0}}/20</mat-hint>
+            </mat-form-field>
+        </div>
         <div class="action-buttons-container">
+            <button mat-stroked-button color="warn" (click)="delete()">Delete account</button>
             <button mat-stroked-button color="accent" type="submit"
                 [disabled]="updateForm.invalid || updateForm.pristine">Save</button>
         </div>
     </form>
+
 </div>
