--- a/Student-Perfomance-Angular-Client/src/app/modules/teacher/components/journal/journal.component.css
+++ b/Student-Perfomance-Angular-Client/src/app/modules/teacher/components/journal/journal.component.css
@@ -1,7 +1,7 @@
 .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
-section.stat {
+div.stat {
     margin-top: 30px;
 }
 mat-form-field:first-child{
